Add all important logo to sandbox page

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,6 +16,7 @@
 	    <div class="col-md-8">
         <div class="text-center">
 	        <h1>Truman Sandbox</h1>
+					<p><img src="truman_logo.png" alt="Truman Logo" width="150" height="150" /></p>
 					<p>Open your web inspector to interact with the <code>truman</code> object on the window, use this box to make API requests:</p>
           <div class="input-group pad_top">
             <span class="input-group-addon">Make call to:</span>
