--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -20,7 +20,7 @@
 					<p>Open your web inspector to interact with the <code>truman</code> object on the window, use this box to make API requests:</p>
           <div class="input-group pad_top">
             <span class="input-group-addon">Make call to:</span>
-            <input id="interactive" type="text" class="form-control" value="http://netflixroulette.net/api/api.php?director=Quentin%20Tarantino">
+            <input id="interactive" type="text" class="form-control" value="https://netflixroulette.net/api/api.php?director=Quentin%20Tarantino">
             <span class="input-group-btn"><button onclick="callUrl();return false;" class="btn btn-primary">submit</button></span>
           </div>
 					<h3>Result</h3>
